# HammingDistance

./: CMakeLists.txt  HammingTest.cpp  README.md  input.txt
HammingToolbox/: CMakeLists.txt  HammingToolbox.cpp  HammingToolbox.hpp
UnitTest/: CMakeLists.txt  HammingUnitTest.cpp  helperFun.cpp  helperFun.hpp
UnitTest/testData/: RefData.txt  inputData.txt
